[package]
name = "jq-rs"
version = "0.4.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
description = "Run jq programs to extract data from json strings."
repository = "https://github.com/onelson/jq-rs"
homepage = "https://github.com/onelson/jq-rs"
license = "Apache-2.0/MIT"
categories = ["api-bindings"]
keywords = ["json", "jq", "query"]
readme = "README.md"
edition = "2018"

[features]
default = []
bundled = ["jq-sys/bundled"]

[dependencies]
jq-sys = "0.2.*"

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"
matches = "0.1.8"

[package.metadata.docs.rs]
features = ["bundled"]

[[bench]]
name = "simple"
harness = false
